--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -11,12 +11,11 @@
     display: flex;
     align-items: end;
     justify-content: flex-start;
-    font-family: 'Arial Black';
+    font-family: 'Sansation-Bold';
     height: 100vh;
-    gap: 10px;
+    gap: 30px;
     font-size: 150px;
-    font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 10px;
     color: #ffffff;
     padding-left: 200px;
     margin-top: -23px;
@@ -24,7 +23,7 @@
 
   @media (max-width: 768px) {
   .vertical-text-container {
-    font-size: 80px;
+    font-size: 100px;
     padding-left: 60px;
     gap: 10px;
   }
@@ -32,29 +31,29 @@
 
 @media (max-width: 480px) {
   .vertical-text-container {
-    font-size: 70px;
+    font-size: 85px;
     padding-left: 40px;
-    gap: 20px;
+    gap: 25px;
   }
 }
 
   @media (min-width: 1600px) {
-    .vertical-text-container {
-      font-size: 140px;
-      padding-left: 280px;
-    }
-  }
-
-  @media (min-width: 1680px) {
     .vertical-text-container {
       font-size: 160px;
       padding-left: 280px;
     }
   }
 
+  @media (min-width: 1680px) {
+    .vertical-text-container {
+      font-size: 175px;
+      padding-left: 280px;
+    }
+  }
+
   @media (min-width: 1920px) {
     .vertical-text-container {
-      font-size: 170px;
+      font-size: 180px;
       padding-left: 280px;
     }
   }
@@ -62,21 +61,21 @@
 
   @media (min-width: 2048px) {
     .vertical-text-container {
-      font-size: 180px;
+      font-size: 200px;
       padding-left: 350px;
     }
   }
 
   @media (min-width: 2560px) {
     .vertical-text-container {
-      font-size: 210px;
+      font-size: 230px;
       padding-left: 350px;
     }
   }
 
   @media (min-width: 3840px) {
     .vertical-text-container {
-      font-size: 310px;
+      font-size: 330px;
       padding-left: 650px;
     }
   }
@@ -785,3 +784,7 @@
     top: 180px;
   }
 }
+
+.top-dashed-line {
+    display: none;
+  }
