флаг дисаблед для проектов

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -825,3 +825,9 @@
     display: none;
   }
 }
+
+/* Шрифт для заблокированных проектов */
+.project-item--disabled {
+  font-family: 'disabled';
+  top: 10px;
+}
